--- a/index.html
+++ b/index.html
@@ -9,7 +9,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 class="text-primary">Peguine</h2>
+    <nav class="navbar main-bg navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/Logo, Icon/Group 33072.png" alt="" width="200" height="50" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section class="main-bg">
+        <div class="container">
+            <div class="row">
+              <div class="col-7 main-text">
+                 <h1><span class="pen">Be the Penguins</span> <br>
+                     of Winter</h1>
+                 <p>Lorem Ipsum is simply dummy text of the printing <br>
+                    and typesetting industry.</p>
+                    <button class="btn btn-buy">
+                        <img src="./Logo, Icon/shopping-cart 1.png" width="30" alt="">
+                         Buy Now
+                    </button>
+              </div>
+              <div class="col-5">
+                 <img class="img-fluid pb-5" src="./Image/model.png" width="400" alt="">
+              </div>
+    
+            </div>
+        </div>
+      </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>   
 </body>
 </html>
