--- a/index.html
+++ b/index.html
@@ -181,6 +181,53 @@
 
       </section>
 
+      <section>
+         <div class="container">
+           <div class="row met">
+              <div class="col-md-6">
+                  <div class="d-flex justify-content-between benifits">
+                    <img src="./Logo, Icon/image 12.png"  
+                     width="100"
+                    alt="">
+                     <div>
+                       <h4>Find the Perfect Fit</h4>
+                       <p>Everybody is different, which is why we
+                        offer styles for every body.</p>
+                     </div>
+                  </div>
+
+                  <div class="d-flex justify-content-between benifits">
+                    <img src="./Logo, Icon/image 13.png"  
+                     width="100"
+                    alt="">
+                     <div>
+                       <h4>Find the Perfect Fit</h4>
+                       <p>One of the many reasons you can shop
+
+                        with peace of mind.</p>
+                     </div>
+
+                  </div>
+                  <div class="d-flex justify-content-between benifits">
+                    <img src="./Logo, Icon/image 14.png"  
+                     width="100"
+                    alt="">
+                     <div>
+                       <h4>Find the Perfect Fit</h4>
+                       <p>They are here to help you. That's quite 
+
+                        literally what we pay them for</p>
+                     </div>
+
+                  </div>
+              </div>
+              <div class="col-md-6">
+                <img src="./Logo, Icon/XMLID 1.png" width="700" alt="">
+              </div>
+           </div>
+         </div>
+      </section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>   
 </body>
 </html>
