--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="main-bg">
         <div class="container">
             <div class="row">
-              <div class="col-7 main-text">
+              <div class="col-md-7 main-text">
                  <h1><span class="pen">Be the Penguins</span> <br>
                      of Winter</h1>
                  <p>Lorem Ipsum is simply dummy text of the printing <br>
@@ -48,7 +48,7 @@
                          Buy Now
                     </button>
               </div>
-              <div class="col-5">
+              <div class="col-md-5">
                  <img class="img-fluid pb-5" src="./Image/model.png" width="400" alt="">
               </div>
     
@@ -60,7 +60,7 @@
         <div class="container">
           <div class="row">
              <h2>Woman Jacket</h2>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image//SeekPng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -77,7 +77,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image/PngItem_2597366 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -95,7 +95,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image/image 15.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -118,11 +118,12 @@
         </div>
 
       </section>
+
       <section class="w-jacket">
         <div class="container">
           <div class="row">
              <h2>Man Jacket</h2>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image/image 11.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -139,7 +140,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image/vippng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -157,7 +158,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <div class="card" style="width: 22rem;">
                 <img src="./Image/toppng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
