Some issu fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar main-bg navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/Logo, Icon/Group 33072.png" alt="" width="200" height="50" class="d-inline-block align-text-top">
+            <img src="/Logo, Icon/brand.png" alt="" width="200" height="50" class="d-inline-block align-text-top">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
           <div class="row">
              <h2>Woman Jacket</h2>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image//SeekPng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Yellow Coat Jacket</h5>
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image/PngItem_2597366 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ladies Jacket </h5>
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image/image 15.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Woman Leather Jacket </h5>
@@ -124,7 +124,7 @@
           <div class="row">
              <h2>Man Jacket</h2>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image/image 11.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Snowboard Jacket Mens</h5>
@@ -141,7 +141,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image/vippng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Man Leather Jackets </h5>
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 22rem;">
+              <div class="card mb-3" style="width: 22rem;">
                 <img src="./Image/toppng 1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Man Casual Jackets </h5>
@@ -222,7 +222,7 @@
 
                   </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 mt-4">
                 <img src="./Logo, Icon/XMLID 1.png" width="700" alt="">
               </div>
            </div>
